k8s/metrics/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  namespace: vm
  name: vmsingle-vmks-victoria-metrics-k8s-stack-nodeport
spec:
  type: NodePort
  ports:
    - nodePort: 31001
      port: 8430
      protocol: TCP
      targetPort: 8429
  selector:
    app.kubernetes.io/instance: vmks-victoria-metrics-k8s-stack
    app.kubernetes.io/name: vmsingle
